# amazonka

./: stack-8.4.3.yaml
amazonka-amplify/: amazonka-amplify.cabal
amazonka-amplify/test/: Main.hs
amazonka-amplify/test/Test/AWS/: Amplify.hs
amazonka-amplify/test/Test/AWS/Amplify/: Internal.hs
amazonka-apigatewaymanagementapi/: amazonka-apigatewaymanagementapi.cabal
amazonka-apigatewaymanagementapi/test/: Main.hs
amazonka-apigatewaymanagementapi/test/Test/AWS/: APIGatewayManagement.hs
amazonka-apigatewaymanagementapi/test/Test/AWS/APIGatewayManagement/: Internal.hs
amazonka-apigatewayv2/: amazonka-apigatewayv2.cabal
amazonka-apigatewayv2/test/: Main.hs
amazonka-apigatewayv2/test/Test/AWS/: APIGatewayV2.hs
amazonka-apigatewayv2/test/Test/AWS/APIGatewayV2/: Internal.hs
amazonka-appmesh/: amazonka-appmesh.cabal
amazonka-appmesh/test/: Main.hs
amazonka-appmesh/test/Test/AWS/: AppMesh.hs
amazonka-appmesh/test/Test/AWS/AppMesh/: Internal.hs
amazonka-backup/: amazonka-backup.cabal
amazonka-backup/test/: Main.hs
amazonka-backup/test/Test/AWS/: Backup.hs
amazonka-backup/test/Test/AWS/Backup/: Internal.hs
amazonka-chime/: amazonka-chime.cabal
amazonka-chime/test/: Main.hs
amazonka-chime/test/Test/AWS/: Chime.hs
amazonka-chime/test/Test/AWS/Chime/: Internal.hs
amazonka-codecommit/: amazonka-codecommit.cabal
amazonka-comprehend/: amazonka-comprehend.cabal
amazonka-comprehendmedical/: amazonka-comprehendmedical.cabal
amazonka-comprehendmedical/test/: Main.hs
amazonka-comprehendmedical/test/Test/AWS/: ComprehendMedical.hs
amazonka-comprehendmedical/test/Test/AWS/ComprehendMedical/: Internal.hs
amazonka-datasync/: amazonka-datasync.cabal
amazonka-datasync/test/: Main.hs
amazonka-datasync/test/Test/AWS/: DataSync.hs
amazonka-datasync/test/Test/AWS/DataSync/: Internal.hs
amazonka-dlm/: amazonka-dlm.cabal
amazonka-dlm/test/: Main.hs
amazonka-dlm/test/Test/AWS/: DLM.hs
amazonka-dlm/test/Test/AWS/DLM/: Internal.hs
amazonka-docdb/: amazonka-docdb.cabal
amazonka-docdb/test/: Main.hs
amazonka-docdb/test/Test/AWS/: DocDB.hs
amazonka-docdb/test/Test/AWS/DocDB/: Internal.hs
amazonka/src/Control/Monad/Trans/: AWS.hs
