name:                  amazonka-backup
version:               1.6.1
synopsis:              Amazon Backup SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Backup" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-backup

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Backup
        , Network.AWS.Backup.CreateBackupPlan
        , Network.AWS.Backup.CreateBackupSelection
        , Network.AWS.Backup.CreateBackupVault
        , Network.AWS.Backup.DeleteBackupPlan
        , Network.AWS.Backup.DeleteBackupSelection
        , Network.AWS.Backup.DeleteBackupVault
        , Network.AWS.Backup.DeleteBackupVaultAccessPolicy
        , Network.AWS.Backup.DeleteBackupVaultNotifications
        , Network.AWS.Backup.DeleteRecoveryPoint
        , Network.AWS.Backup.DescribeBackupJob
        , Network.AWS.Backup.DescribeBackupVault
        , Network.AWS.Backup.DescribeProtectedResource
        , Network.AWS.Backup.DescribeRecoveryPoint
        , Network.AWS.Backup.DescribeRestoreJob
        , Network.AWS.Backup.ExportBackupPlanTemplate
        , Network.AWS.Backup.GetBackupPlan
        , Network.AWS.Backup.GetBackupPlanFromJSON
        , Network.AWS.Backup.GetBackupPlanFromTemplate
        , Network.AWS.Backup.GetBackupSelection
        , Network.AWS.Backup.GetBackupVaultAccessPolicy
        , Network.AWS.Backup.GetBackupVaultNotifications
        , Network.AWS.Backup.GetRecoveryPointRestoreMetadata
        , Network.AWS.Backup.GetSupportedResourceTypes
        , Network.AWS.Backup.ListBackupJobs
        , Network.AWS.Backup.ListBackupPlanTemplates
        , Network.AWS.Backup.ListBackupPlanVersions
        , Network.AWS.Backup.ListBackupPlans
        , Network.AWS.Backup.ListBackupSelections
        , Network.AWS.Backup.ListBackupVaults
        , Network.AWS.Backup.ListProtectedResources
        , Network.AWS.Backup.ListRecoveryPointsByBackupVault
        , Network.AWS.Backup.ListRecoveryPointsByResource
        , Network.AWS.Backup.ListRestoreJobs
        , Network.AWS.Backup.ListTags
        , Network.AWS.Backup.PutBackupVaultAccessPolicy
        , Network.AWS.Backup.PutBackupVaultNotifications
        , Network.AWS.Backup.StartBackupJob
        , Network.AWS.Backup.StartRestoreJob
        , Network.AWS.Backup.StopBackupJob
        , Network.AWS.Backup.TagResource
        , Network.AWS.Backup.Types
        , Network.AWS.Backup.UntagResource
        , Network.AWS.Backup.UpdateBackupPlan
        , Network.AWS.Backup.UpdateRecoveryPointLifecycle
        , Network.AWS.Backup.Waiters

    other-modules:
          Network.AWS.Backup.Internal
        , Network.AWS.Backup.Types.Product
        , Network.AWS.Backup.Types.Sum

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5

test-suite amazonka-backup-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Backup
        , Test.AWS.Gen.Backup
        , Test.AWS.Backup.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-backup
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
