name:                  amazonka-datasync
version:               1.6.1
synopsis:              Amazon DataSync SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.DataSync" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-datasync

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.DataSync
        , Network.AWS.DataSync.CancelTaskExecution
        , Network.AWS.DataSync.CreateAgent
        , Network.AWS.DataSync.CreateLocationEfs
        , Network.AWS.DataSync.CreateLocationNfs
        , Network.AWS.DataSync.CreateLocationS3
        , Network.AWS.DataSync.CreateTask
        , Network.AWS.DataSync.DeleteAgent
        , Network.AWS.DataSync.DeleteLocation
        , Network.AWS.DataSync.DeleteTask
        , Network.AWS.DataSync.DescribeAgent
        , Network.AWS.DataSync.DescribeLocationEfs
        , Network.AWS.DataSync.DescribeLocationNfs
        , Network.AWS.DataSync.DescribeLocationS3
        , Network.AWS.DataSync.DescribeTask
        , Network.AWS.DataSync.DescribeTaskExecution
        , Network.AWS.DataSync.ListAgents
        , Network.AWS.DataSync.ListLocations
        , Network.AWS.DataSync.ListTagsForResource
        , Network.AWS.DataSync.ListTaskExecutions
        , Network.AWS.DataSync.ListTasks
        , Network.AWS.DataSync.StartTaskExecution
        , Network.AWS.DataSync.TagResource
        , Network.AWS.DataSync.Types
        , Network.AWS.DataSync.UntagResource
        , Network.AWS.DataSync.UpdateAgent
        , Network.AWS.DataSync.UpdateTask
        , Network.AWS.DataSync.Waiters

    other-modules:
          Network.AWS.DataSync.Internal
        , Network.AWS.DataSync.Types.Product
        , Network.AWS.DataSync.Types.Sum

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5

test-suite amazonka-datasync-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.DataSync
        , Test.AWS.Gen.DataSync
        , Test.AWS.DataSync.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-datasync
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
