name:                  amazonka-docdb
version:               1.6.1
synopsis:              Amazon DocumentDB with MongoDB compatibility SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.DocDB" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-docdb

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.DocDB
        , Network.AWS.DocDB.AddTagsToResource
        , Network.AWS.DocDB.ApplyPendingMaintenanceAction
        , Network.AWS.DocDB.CopyDBClusterParameterGroup
        , Network.AWS.DocDB.CopyDBClusterSnapshot
        , Network.AWS.DocDB.CreateDBCluster
        , Network.AWS.DocDB.CreateDBClusterParameterGroup
        , Network.AWS.DocDB.CreateDBClusterSnapshot
        , Network.AWS.DocDB.CreateDBInstance
        , Network.AWS.DocDB.CreateDBSubnetGroup
        , Network.AWS.DocDB.DeleteDBCluster
        , Network.AWS.DocDB.DeleteDBClusterParameterGroup
        , Network.AWS.DocDB.DeleteDBClusterSnapshot
        , Network.AWS.DocDB.DeleteDBInstance
        , Network.AWS.DocDB.DeleteDBSubnetGroup
        , Network.AWS.DocDB.DescribeDBClusterParameterGroups
        , Network.AWS.DocDB.DescribeDBClusterParameters
        , Network.AWS.DocDB.DescribeDBClusterSnapshotAttributes
        , Network.AWS.DocDB.DescribeDBClusterSnapshots
        , Network.AWS.DocDB.DescribeDBClusters
        , Network.AWS.DocDB.DescribeDBEngineVersions
        , Network.AWS.DocDB.DescribeDBInstances
        , Network.AWS.DocDB.DescribeDBSubnetGroups
        , Network.AWS.DocDB.DescribeEngineDefaultClusterParameters
        , Network.AWS.DocDB.DescribeEventCategories
        , Network.AWS.DocDB.DescribeEvents
        , Network.AWS.DocDB.DescribeOrderableDBInstanceOptions
        , Network.AWS.DocDB.DescribePendingMaintenanceActions
        , Network.AWS.DocDB.FailoverDBCluster
        , Network.AWS.DocDB.ListTagsForResource
        , Network.AWS.DocDB.ModifyDBCluster
        , Network.AWS.DocDB.ModifyDBClusterParameterGroup
        , Network.AWS.DocDB.ModifyDBClusterSnapshotAttribute
        , Network.AWS.DocDB.ModifyDBInstance
        , Network.AWS.DocDB.ModifyDBSubnetGroup
        , Network.AWS.DocDB.RebootDBInstance
        , Network.AWS.DocDB.RemoveTagsFromResource
        , Network.AWS.DocDB.ResetDBClusterParameterGroup
        , Network.AWS.DocDB.RestoreDBClusterFromSnapshot
        , Network.AWS.DocDB.RestoreDBClusterToPointInTime
        , Network.AWS.DocDB.Types
        , Network.AWS.DocDB.Waiters

    other-modules:
          Network.AWS.DocDB.Internal
        , Network.AWS.DocDB.Types.Product
        , Network.AWS.DocDB.Types.Sum

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5

test-suite amazonka-docdb-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.DocDB
        , Test.AWS.Gen.DocDB
        , Test.AWS.DocDB.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-docdb
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
